<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_app">
        <item
            android:id="@+id/item_apps"
            android:title="@string/apps"
            android:icon="@drawable/ic_apps" />
        <item
            android:id="@+id/action_stats"
            android:title="@string/stats"
            android:icon="@drawable/ic_list" />
    </group>
    <group android:id="@+id/group_social">
        <item
            android:id="@+id/action_open_user_guide"
            android:title="@string/user_guide"
            android:icon="@drawable/ic_book" />
        <item
            android:id="@+id/action_rate_app"
            android:title="@string/rate_app"
            android:icon="@drawable/ic_star" />
        <item
            android:id="@+id/action_share_app"
            android:title="@string/share"
            android:icon="@drawable/ic_share" />
        <item
            android:id="@+id/action_open_telegram"
            android:title="@string/open_telegram_group"
            android:icon="@drawable/ic_telegram" />
        <item
            android:id="@+id/action_open_github"
            android:title="@string/open_github"
            android:icon="@drawable/ic_github" />

        <item
            android:id="@+id/action_about"
            android:title="@string/about"
            android:icon="@drawable/ic_copyright" />
    </group>
</menu>