<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:title="@string/hide">
        <menu>
            <item
                android:id="@+id/hide_app"
                android:title=""
                tools:title="@string/app_val"
                android:visible="false" />

            <item
                android:id="@+id/hide_ip"
                android:title=""
                tools:title="@string/ip_address_val" />

            <item
                android:id="@+id/hide_host"
                android:title=""
                tools:title="@string/host_val"
                android:visible="false" />

            <item
                android:id="@+id/hide_root_domain"
                android:title=""
                tools:title="@string/host_val"
                android:visible="false" />

            <item
                android:id="@+id/hide_proto"
                android:title=""
                tools:title="@string/protocol_val" />
        </menu>
    </item>

    <item android:title="@string/search">
        <menu>
            <item
                android:id="@+id/search_app"
                android:title=""
                tools:title="@string/app_val" />

            <item
                android:id="@+id/search_ip"
                android:title=""
                tools:title="@string/ip_address_val" />

            <item
                android:id="@+id/search_host"
                android:title=""
                tools:title="@string/host_val"
                android:visible="false" />

            <item
                android:id="@+id/search_proto"
                android:title=""
                tools:title="@string/protocol_val" />
        </menu>
    </item>

    <item
        android:id="@+id/open_app_details"
        android:title="@string/app_details" />
</menu>