<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/show_hint"
        android:title="@string/hint"
        android:orderInCategory="10"
        android:icon="@drawable/ic_help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_export"
        android:title="@string/export_action"
        android:orderInCategory="18"
        android:icon="@drawable/ic_file_export"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_import"
        android:title="@string/import_action"
        android:orderInCategory="19"
        android:icon="@drawable/ic_file_import"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/copy_to_clipboard"
        android:title="@string/copy_to_clipboard"
        android:orderInCategory="20"
        android:icon="@drawable/ic_content_copy"
        app:showAsAction="never" />

    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:orderInCategory="30"
        android:icon="@drawable/ic_share"
        app:showAsAction="never" />
</menu>