<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/block_app"
        android:title="@string/action_block" />
    <item
        android:id="@+id/add_to_fw_whitelist"
        android:title="@string/add_to_fw_whitelist"
        tools:visible="true"
        android:visible="false" />
    <item
        android:id="@+id/remove_from_fw_whitelist"
        android:title="@string/remove_from_fw_whitelist"
        android:visible="false" />

    <item
        android:id="@+id/unblock_app_permanently"
        android:title="@string/unblock_permanently" />
    <item
        android:id="@+id/unblock_app_10m"
        android:title="" />
    <item
        android:id="@+id/unblock_app_1h"
        android:title="" />
    <item
        android:id="@+id/unblock_app_8h"
        android:title="" />
</menu>