<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigate_before"
        android:title="@string/previous"
        android:orderInCategory="10"
        android:icon="@drawable/ic_navigate_before"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigate_next"
        android:title="@string/next"
        android:orderInCategory="20"
        android:icon="@drawable/ic_navigate_next"
        app:showAsAction="always" />

    <!-- Menu items for ConnectionOverview fragment -->
    <item
        android:id="@+id/copy_to_clipboard"
        android:title="@string/copy_to_clipboard"
        android:orderInCategory="30"
        android:icon="@drawable/ic_content_copy"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:orderInCategory="40"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <!-- Menu items for ConnectionPayload fragment -->
    <item
        android:id="@+id/display_as"
        android:title="@string/display_as_text"
        android:orderInCategory="50"
        android:icon="@drawable/ic_short_text"
        app:showAsAction="never"
        android:visible="false" />
</menu>
