<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_start"
        android:title="@string/start_button"
        android:orderInCategory="10"
        android:icon="@drawable/ic_play_arrow"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_stop"
        android:title="@string/stop_button"
        android:orderInCategory="20"
        android:icon="@drawable/ic_media_stop"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/title_activity_settings"
        android:orderInCategory="30"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/open_pcap"
        android:title="@string/open_pcap_file"
        android:enabled="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/decrypt_pcap"
        android:title="@string/decrypt_pcap_file"
        android:enabled="true"
        app:showAsAction="never" />
</menu>
