<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="15dp">

        <RelativeLayout
            android:id="@+id/connections_mask"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp">

            <CheckBox
                android:id="@+id/not_hidden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/edit_mask"
                android:text="@string/not_hidden_filter" />

            <Button
                android:id="@+id/edit_mask"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/edit_list"
                android:textColor="@color/colorTabText" />
        </RelativeLayout>

        <CheckBox
            android:id="@+id/only_blocked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/show_only_blocked" />

        <CheckBox
            android:id="@+id/only_blacklisted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/show_only_malicious" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"/>
        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/status_open"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conn_status_open"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/status_closed"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conn_status_closed"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/status_unreachable"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conn_status_unreachable"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/status_error"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"/>
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/decryption_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decryption"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_marginBottom="5dp"/>
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/decryption_status_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/dec_status_decrypted"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrypted"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/dec_status_in_progress"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_progress"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/dec_status_not_decryptable"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_decryptable"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/dec_status_error"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"/>
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/interfaces_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_interface"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_marginBottom="5dp"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/interfaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:singleSelection="true">
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>
</ScrollView>