<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#2A2A2A"
    android:filterTouchesWhenObscured="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:paddingVertical="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/ctrl_consent_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF6565"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:text="@string/ctrl_consent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/deny_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/deny"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/allow_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/allow"
            android:enabled="false"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>
</LinearLayout>